Добавил метод получения билетов конкретного рейса
